# cpp-template

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
ci/: build.sh
include/: dummy.h
src/: dummy.cpp  main.cpp
test/: dummy_test.cpp
